# ml_zoomcamp_2025

./: .gitignore  Dockerfile  Pipfile  README.md  fly.toml  main.py  pyproject.toml
1-intro/: homework.ipynb
10-kubernetes/: Dockerfile  requirements.txt  test.py
10-kubernetes/homework/: q6_test.py  service.yml
10-kubernetes/k8s/: deployment.yaml  hpa.yml  service.yml
2-regression/: homework.ipynb
3-classification/: homework.ipynb
4-evaluation/: homework.ipynb
5-deployment/: marketing_client.py  ping.py  predict.py  workshop-uv-fastapi.ipynb
6-trees/: homework.ipynb
8-deep-learning/: hair_type_classification.ipynb  pytorch-fashion-classification.ipynb  tensorflow-fashion-classification.ipynb
9-serverless/lambda-hair-classifier/: Dockerfile  lambda_function.py
9-serverless/lambda-keras/convert/: Dockerfile
9-serverless/lambda-pytorch/: lambda_function.py
9-serverless/lambda-sklearn/: Dockerfile  invoke.py  publish.sh  test.py
lead-scoring/: Dockerfile  main.py  predict.py  pyproject.toml  test.py
