[project]
name = "ml-zoomcamp-2025"
version = "0.1.0"
description = "Churn Predictor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
#
# [tool.uv.workspace]
# members = [
#    "lead-scoring",
# ]
